[project]
name = "tifeatures"
description = "Simple and Fast Geospatial Features API for PostGIS."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.org"},
    {name = "David Bitner", email = "david@developmentseed.org"},
]
keywords = ["FastAPI", "POSTGIS", "OGC Features"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "orjson",
    "asyncpg>=0.23.0",
    "buildpg>=0.3",
    "fastapi>=0.87",
    "jinja2>=2.11.2,<4.0.0",
    "geojson-pydantic>=0.4.3",
    "pygeofilter>=0.2.0,<0.3.0",
    "ciso8601~=2.2.0",
    "starlette-cramjam>=0.3,<0.4",
    "importlib_resources>=1.1.0; python_version < '3.9'",
    "typing_extensions; python_version < '3.9.2'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-benchmark",
    "httpx",
    "psycopg2",
    "pytest-pgsql",
]
dev = [
    "pre-commit",
]
server = [
    "uvicorn[standard]>=0.12.0,<0.19.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pygments",
    "pdocs",
]

[project.urls]
Homepage = "https://developmentseed.org/tifeatures"
Source = "https://github.com/developmentseed/tifeatures"
Documentation = "https://developmentseed.org/tifeatures/"

[tool.hatch.version]
path = "tifeatures/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  "/dockerfiles",
  "/docs",
  "/data",
  "docker-compose.yml",
  "CONTRIBUTING.md",
  "CHANGES.md",
  ".pytest_cache",
  ".github",
  ".bumpversion.cfg",
  ".env.example",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.isort]
profile = "black"
known_first_party = ["tifeatures"]
known_third_party = ["geojson_pydantic", "buildpg", "pydantic"]
forced_separate = [
    "fastapi",
    "starlette",
]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.pydocstyle]
select = "D1"
match = "(?!test).*.py"
